--- a/app/components/Account/Login/loginView.html
+++ b/app/components/Account/Login/loginView.html
@@ -1,12 +1,26 @@
-<h1>{{'texts.Login' | i18next}}</h1>
-<form>
-  <div class="form-group">
-    <label for="name">{{'texts.Username' | i18next}}:</label>
-    <input type="text" class="form-control" id="name" placeholder="{{'texts.Username' | i18next}}" ng-model="name" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="password">{{'texts.Password' | i18next}}:</label>
-    <input type="password" class="form-control" id="password" placeholder="{{'texts.Password' | i18next}}" ng-model="password" ng-minlength="5" required="string" required/>
-  </div>
-  <input type="submit" class="btn btn-primary" ng-click="login()" value="{{'texts.Login' | i18next}}"/>
-</form>
+<div class="login-page">
+  <h1>{{'texts.Login' | i18next}}</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et tempor nisi. Ut pellentesque tortor nec justo ullamcorper, sed hendrerit risus ultricies.</p>
+  <form>
+    <div class="form-group has-feedback has-feedback-left">
+      <!--<label class="control-label">Username</label>-->
+      <input type="text" class="form-control my-input" placeholder="{{'texts.Username' | i18next}}" id="name"  ng-model="name"/>
+      <i class="glyphicon glyphicon-user form-control-feedback"></i>
+    </div>
+    <div class="form-group has-feedback has-feedback-left">
+      <input type="password" class="form-control my-input" id="password" placeholder="{{'texts.Password' | i18next}}" ng-model="password"/>
+      <i class="glyphicon glyphicon-lock form-control-feedback"></i>
+    </div>
+    <div class="form-group">
+      <input class="my-button normal-button" ng-click="login()" value="{{'texts.Login' | i18next}}" onfocus="this.blur()"/>
+    </div>
+    <div class="form-group">
+      <input class="my-button important-button" ui-sref="registration" value="{{'texts.Registration' | i18next}}" onfocus="this.blur()"/>
+    </div>
+    <div class="form-group">
+      <input class="my-button easy-button" value="Zapoměl jste heslo?"/>
+    </div>
+  </form>
+</div>
+
+  
