--- a/css/content.css
+++ b/css/content.css
@@ -1,4 +1,38 @@
+.middle{
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 80px;
+    padding-right: 80px;
+    background: white;
+    overflow: hidden;
+}
+
 .content{
     max-width: 1140px;
     margin: 0 auto;
+}
+
+h1{
+    font-size: 34px;
+}
+
+@media (max-width: 767px) {
+    .middle{
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .login-page{
+        margin: 0 auto;
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    .login-page .my-button{
+        float: none;
+        margin-right: 0;
+        margin: 0 auto;
+    }
 }
