--- a/css/header.css
+++ b/css/header.css
@@ -30,7 +30,7 @@ header{
     min-height: 80px;
     padding-left: 80px;
     padding-right: 80px;
-    padding-top: 29px;
+    padding-top: 28px;
 }
 
 .navbar-default{
@@ -141,8 +141,9 @@ header{
 .header-button-important{
     text-align: center;
     cursor: pointer;
-    margin-top: -14px;
-    box-shadow:0px 0px 0px 1px #e6e6f1 inset;
+    margin-top: -15px;
+    border: 1px solid #e6e6f1;
+    /*box-shadow:0px 0px 0px 1px #e6e6f1 inset;*/
 }
 .header-button-important:hover{
     font-weight: bold;
@@ -193,7 +194,7 @@ header{
 @media (max-width: 900px) {
     .header-top{
         padding: 0;
-        padding-top: 29px;
+        padding-top: 28px;
     }
     .header-bottom{
         padding: 0;
