--- a/css/form.css
+++ b/css/form.css
@@ -32,6 +32,10 @@
     border: 1px solid #e6e6f1;
     border-radius: 0;
 }
+.input-error{
+    border: 1px solid #e91d27;
+}
+
 .form-control:focus{
     border-color: #e6e6f1;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(230, 230, 241, .6);
