--- a/app/components/Account/Login/loginView.html
+++ b/app/components/Account/Login/loginView.html
@@ -1,26 +1,23 @@
 <div class="login-page">
-  <h1>{{'texts.Login' | i18next}}</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et tempor nisi. Ut pellentesque tortor nec justo ullamcorper, sed hendrerit risus ultricies.</p>
+  <h1>{{'texts.login' | i18next}}</h1>
+  <p>{{'texts.login_text' | i18next}}</p>
   <form name="loginForm" novalidate>
     <div class="form-group has-feedback has-feedback-left">
-      <!--<label class="control-label">Username</label>-->
-      <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.Username' | i18next}}" ng-model="user.name" ng-class="{'input-error' : loginForm.username.$invalid && (!loginForm.username.$pristine || clicked)}" ng-minlength="3" required/>
+      <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="user.name" ng-class="{'input-error' : loginForm.username.$invalid && (!loginForm.username.$pristine || clicked)}" ng-minlength="5" required/>
       <i class="glyphicon glyphicon-user form-control-feedback"></i>
     </div>
     <div class="form-group has-feedback has-feedback-left">
-      <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.Password' | i18next}}" ng-model="user.password" ng-class="{'input-error' : loginForm.password.$invalid && (!loginForm.password.$pristine || clicked)}" required/>
+      <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="user.password" ng-class="{'input-error' : loginForm.password.$invalid && (!loginForm.password.$pristine || clicked)}" ng-minlength="8" required/>
       <i class="glyphicon glyphicon-lock form-control-feedback"></i>
     </div>
     <div class="form-group">
-      <input class="my-button normal-button" ng-click="login()" value="{{'texts.Login' | i18next}}" onfocus="this.blur()"/>
+      <div class="my-button normal-button" ng-click="login()" >{{'texts.login' | i18next}}</div>
     </div>
     <div class="form-group">
-      <input class="my-button important-button" ui-sref="registration" value="{{'texts.Registration' | i18next}}" onfocus="this.blur()"/>
+      <div class="my-button important-button" ui-sref="registration" >{{'texts.registration' | i18next}}</div>
     </div>
     <div class="form-group">
-      <input class="my-button easy-button" value="Zapoměl jste heslo?"/>
+      <div class="my-button easy-button">{{'texts.forgot_password' | i18next}}</div>
     </div>
   </form>
 </div>
-
-  
