--- a/app/components/Account/Registration/registrationView.html
+++ b/app/components/Account/Registration/registrationView.html
@@ -1,69 +1,88 @@
-<h1>{{'texts.Registration' | i18next}}</h1>
-<label for="transporter">Transporter</label>
-<input type="radio" name="transporter" id="transporter" ng-model="transporter" value="true" />
-<label for="sender">Sender</label>
-<input type="radio" name="sender" id="sender" ng-model="transporter" value="" ng-checked="true"/>
-<form name="registrationForm" novalidate>
-  <div class="form-group">
-    <input type="text" name="username" class="form-control" placeholder="{{'texts.Username' | i18next}}" ng-model="user.username" ng-class="{'input-error' : registrationForm.username.$invalid && (!registrationForm.username.$pristine || clicked)}" ng-minlength="8" required/>
-  </div>
-  <div class="form-group">
-    <input type="password" name="password" class="form-control" placeholder="{{'texts.Password' | i18next}}" ng-model="user.password" ng-class="{'input-error' : registrationForm.password.$invalid && (!registrationForm.password.$pristine || clicked)}" ng-minlength="8" required/>
-  </div>
-  <div class="form-group">
-    <input type="password" name="confirmPassword" class="form-control" placeholder="{{'texts.ConfirmPassword' | i18next}}" ng-model="user.confirmPassword" ng-class="{'input-error' : registrationForm.confirmPassword.$invalid && (!registrationForm.confirmPassword.$pristine || clicked)}" ng-minlength="8" required/>
-  </div>
-  <div class="form-group">
-    <label for="contact_person_name">contact_person_name:</label>
-    <input type="text" class="form-control" id="contact_person_name" placeholder="contact_person_name" ng-model="contact_person_name" required="string" required/>
-  </div>
-   <div class="form-group">
-    <label for="contact_person_surname">contact_person_surname:</label>
-    <input type="text" class="form-control" id="contact_person_surname" placeholder="contact_person_surname" ng-model="contact_person_surname" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="company_name">company_name:</label>
-    <input type="text" class="form-control" id="company_name" placeholder="company_name" ng-model="company_name" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="ico">ico:</label>
-    <input type="text" class="form-control" id="ico" placeholder="ico" ng-model="ico" required="number" required/>
-  </div>
-  <div class="form-group">
-    <label for="dic">dic:</label>
-    <input type="text" class="form-control" id="dic" placeholder="dic" ng-model="dic" required="number" required/>
-  </div>
-  <div class="form-group">
-    <label for="bank_account">bank_account:</label>
-    <input type="text" class="form-control" id="bank_account" placeholder="bank_account" ng-model="bank_account" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="address_state">address_state:</label>
-    <input type="text" class="form-control" id="address_state" placeholder="address_state" ng-model="address_state" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="address_street">address_street:</label>
-    <input type="text" class="form-control" id="address_street" placeholder="address_street" ng-model="address_street" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="address_house_number">address_house_number:</label>
-    <input type="text" class="form-control" id="address_house_number" placeholder="address_house_number" ng-model="address_house_number" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="psc">psc:</label>
-    <input type="text" class="form-control" id="psc" placeholder="psc" ng-model="psc" required="number" required/>
-  </div>
-  <div class="form-group">
-    <label for="phone_number">phone_number:</label>
-    <input type="text" class="form-control" id="phone_number" placeholder="phone_number" ng-model="phone_number" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="email">email:</label>
-    <input type="text" class="form-control" id="email" placeholder="email" ng-model="email" required="string" required/>
-  </div>
-  <div class="form-group" ng-show="transporter">
-    <label for="have_drivers">have_drivers:</label>
-    <input type="checkbox" class="form-control" id="have_drivers" ng-model="have_drivers"/>
-  </div>
-  <input type="submit" class="btn btn-primary" ng-click="registration()" value="{{'texts.Registration' | i18next}}"/>
-</form>
+<div class="registration-page">
+  <h1>{{'texts.registration_employee' | i18next}}</h1>
+  <p>{{'texts.registration_text' | i18next}}</p>
+  <form name="registrationForm" novalidate>
+    <div class="form-group radio-group">
+      <input type="radio" name="role" class="my-radio" id="transporter" ng-model="user.role" value="2" required/>
+      <label for="transporter">{{'texts.transporter' | i18next}}</label>
+      <input type="radio" name="role" class="my-radio" id="sender" ng-model="user.role" value="1"/>
+      <label for="sender">{{'texts.sender' | i18next}}</label>
+    </div>
+    <div class="form-group">
+      <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="user.username" 
+        ng-class="{'input-error' : registrationForm.username.$invalid && (!registrationForm.username.$pristine || clicked)}" 
+        ng-minlength="8" required />
+    </div>
+    <div class="form-group">
+      <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="user.password" 
+      ng-class="{'input-error' : registrationForm.password.$invalid && (!registrationForm.password.$pristine || clicked)}" 
+      ng-minlength="8" required />
+    </div>
+    <div class="form-group">
+      <input type="password" name="confirmPassword" class="form-control my-input" placeholder="{{'texts.confirmPassword' | i18next}}" ng-model="user.confirmPassword" 
+      ng-class="{'input-error' : registrationForm.confirmPassword.$invalid && (!registrationForm.confirmPassword.$pristine || clicked)}" 
+      ng-minlength="8" required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="contact_person_name" class="form-control my-input" placeholder="{{'texts.contact_person_name' | i18next}}" ng-model="user.contact_person_name" 
+      ng-class="{'input-error' : registrationForm.contact_person_name.$invalid && (!registrationForm.contact_person_name.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="contact_person_surname" class="form-control my-input" placeholder="{{'texts.contact_person_surname' | i18next}}" ng-model="user.contact_person_surname" 
+      ng-class="{'input-error' : registrationForm.contact_person_surname.$invalid && (!registrationForm.contact_person_surname.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="company_name" class="form-control my-input" placeholder="{{'texts.company_name' | i18next}}" ng-model="user.company_name" 
+      ng-class="{'input-error' : registrationForm.company_name.$invalid && (!registrationForm.company_name.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="ico" class="form-control my-input" placeholder="{{'texts.ico' | i18next}}" ng-model="user.ico" 
+      ng-class="{'input-error' : registrationForm.ico.$invalid && (!registrationForm.ico.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="dic" class="form-control my-input" placeholder="{{'texts.dic' | i18next}}" ng-model="user.dic" 
+      ng-class="{'input-error' : registrationForm.dic.$invalid && (!registrationForm.dic.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="bank_account" class="form-control my-input" placeholder="{{'texts.bank_account' | i18next}}" ng-model="user.bank_account" 
+      ng-class="{'input-error' : registrationForm.bank_account.$invalid && (!registrationForm.bank_account.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="address_state" class="form-control my-input" placeholder="{{'texts.address_state' | i18next}}" ng-model="user.address_state" 
+      ng-class="{'input-error' : registrationForm.address_state.$invalid && (!registrationForm.address_state.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="address_street" class="form-control my-input" placeholder="{{'texts.address_street' | i18next}}" ng-model="user.address_street" 
+      ng-class="{'input-error' : registrationForm.address_street.$invalid && (!registrationForm.address_street.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="address_house_number" class="form-control my-input" placeholder="{{'texts.address_house_number' | i18next}}" ng-model="user.address_house_number" 
+      ng-class="{'input-error' : registrationForm.address_house_number.$invalid && (!registrationForm.address_house_number.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="psc" class="form-control my-input" placeholder="{{'texts.psc' | i18next}}" ng-model="user.psc" 
+      ng-class="{'input-error' : registrationForm.psc.$invalid && (!registrationForm.psc.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="phone_number" class="form-control my-input" placeholder="{{'texts.phone_number' | i18next}}" ng-model="user.phone_number" 
+      ng-class="{'input-error' : registrationForm.phone_number.$invalid && (!registrationForm.phone_number.$pristine || clicked)}" 
+      ng-minlength="9" required />
+    </div>
+    <div class="form-group">
+      <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="user.email" 
+      ng-class="{'input-error' : registrationForm.email.$invalid && (!registrationForm.email.$pristine || clicked)}" 
+      required />
+    </div>
+    <div class="my-button important-button" ng-click="registration()">{{'texts.registration' | i18next}}</div>
+  </form>
+</div>
