--- a/css/header.css
+++ b/css/header.css
@@ -58,10 +58,6 @@ header{
     background: #ff810a;
 }
 
-
-
-
-
 .header-top{
     min-height: 80px;
     padding-left: 80px;
@@ -92,6 +88,18 @@ header{
     padding-left: 80px;
     padding-right: 80px;
     overflow: hidden;
+}
+
+.dropdown-menu{
+    padding: 0;
+    font-size: 16px;
+    text-align: center;
+    margin-right: 12px;
+    margin-top: 0px;
+}
+
+.dropdown-menu > li > a{
+    padding: 9px 20px;
 }
 
 .header-logo{
