--- a/app/components/Account/Registration/addUserView.html
+++ b/app/components/Account/Registration/addUserView.html
@@ -1,58 +1,73 @@
-<h1>Registorvat noveho zamestance</h1>
+<div class="add-user-page">
+  <h1>{{'texts.registration_user' | i18next}}</h1>
+  <form name="addUserForm" novalidate>
 
-<label for="driver">driver</label>
-<input type="radio" name="driver" id="driver" ng-model="driver" value="true" />
-<label for="dispatcher">dispatcher</label>
-<input type="radio" name="dispatcher" id="dispatcher" ng-model="driver" value="" ng-checked="true"/>
+    <div class="form-group radio-group">
+      <input type="radio" name="role" class="my-radio" id="driver" ng-model="employee.role" value="4" required/>
+      <label for="driver">{{'texts.driver' | i18next}}</label>
+      <input type="radio" name="role" class="my-radio" id="dispatcher" ng-model="employee.role" value="3"/>
+      <label for="dispatcher">{{'texts.dispatcher' | i18next}}</label>
+    </div>
 
-<form>
-  <div class="form-group">
-    <label for="name">{{'texts.username' | i18next}}:</label>
-    <input type="text" class="form-control" id="name" placeholder="{{'texts.Username' | i18next}}" ng-model="username" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="password">{{'texts.Password' | i18next}}:</label>
-    <input type="password" class="form-control" id="password" placeholder="{{'texts.Password' | i18next}}" ng-model="password" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="password">{{'texts.ConfirmPassword' | i18next}}:</label>
-    <input type="password" class="form-control" id="confirmPassword" placeholder="{{'texts.ConfirmPassword' | i18next}}" ng-model="confirmPassword" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="name">name:</label>
-    <input type="text" class="form-control" id="name" placeholder="name" ng-model="name" required="string" required/>
-  </div>
-   <div class="form-group">
-    <label for="surname">surname:</label>
-    <input type="text" class="form-control" id="surname" placeholder="surname" ng-model="surname" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="address_state">address_state:</label>
-    <input type="text" class="form-control" id="address_state" placeholder="address_state" ng-model="address_state" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="address_street">address_street:</label>
-    <input type="text" class="form-control" id="address_street" placeholder="address_street" ng-model="address_street" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="address_house_number">address_house_number:</label>
-    <input type="text" class="form-control" id="address_house_number" placeholder="address_house_number" ng-model="address_house_number" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="psc">psc:</label>
-    <input type="text" class="form-control" id="psc" placeholder="psc" ng-model="psc" required="number" required/>
-  </div>
-  <div class="form-group">
-    <label for="phone_number">phone_number:</label>
-    <input type="text" class="form-control" id="phone_number" placeholder="phone_number" ng-model="phone_number" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="email">email:</label>
-    <input type="text" class="form-control" id="email" placeholder="email" ng-model="email" required="string" required/>
-  </div>
-  <div class="form-group" ng-show="driver">
-    <label for="driver_licence">driver_licence:</label>
-    <input type="text" class="form-control" id="driver_licence" placeholder="driver_licence" ng-model="driver_licence" required="string"/>
-  </div>
-  <input type="submit" class="btn btn-primary" ng-click="AddUser()" value="{{'texts.Registration' | i18next}}"/>
-</form>
+    <div class="form-group">
+      <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="employee.username"
+             ng-class="{'input-error' : addUserForm.username.$invalid && (!addUserForm.username.$pristine || clicked)}"
+             ng-minlength="8" required />
+    </div>
+    <div class="form-group">
+      <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="employee.password"
+             ng-class="{'input-error' : addUserForm.password.$invalid && (!addUserForm.password.$pristine || clicked)}"
+             ng-minlength="8" required />
+    </div>
+    <div class="form-group">
+      <input type="password" name="confirmPassword" class="form-control my-input" placeholder="{{'texts.confirmPassword' | i18next}}" ng-model="employee.confirmPassword"
+             ng-class="{'input-error' : addUserForm.confirmPassword.$invalid && (!addUserForm.confirmPassword.$pristine || clicked)}"
+             ng-minlength="8" required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="name" class="form-control my-input" placeholder="{{'texts.name' | i18next}}" ng-model="employee.name"
+             ng-class="{'input-error' : addUserForm.name.$invalid && (!addUserForm.name.$pristine || clicked)}"
+             required />
+    </div>
+     <div class="form-group">
+       <input type="text" name="surname" class="form-control my-input" placeholder="{{'texts.surname' | i18next}}" ng-model="employee.surname"
+              ng-class="{'input-error' : addUserForm.surname.$invalid && (!addUserForm.surname.$pristine || clicked)}"
+              required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="address_state" class="form-control my-input" placeholder="{{'texts.address_state' | i18next}}" ng-model="employee.address_state"
+             ng-class="{'input-error' : addUserForm.address_state.$invalid && (!addUserForm.address_state.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="address_street" class="form-control my-input" placeholder="{{'texts.address_street' | i18next}}" ng-model="employee.address_street"
+             ng-class="{'input-error' : addUserForm.address_street.$invalid && (!addUserForm.address_street.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="address_house_number" class="form-control my-input" placeholder="{{'texts.address_house_number' | i18next}}" ng-model="employee.address_house_number"
+             ng-class="{'input-error' : addUserForm.address_house_number.$invalid && (!addUserForm.address_house_number.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="psc" class="form-control my-input" placeholder="{{'texts.psc' | i18next}}" ng-model="employee.psc"
+             ng-class="{'input-error' : addUserForm.psc.$invalid && (!addUserForm.psc.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="phone_number" class="form-control my-input" placeholder="{{'texts.phone_number' | i18next}}" ng-model="employee.phone_number"
+             ng-class="{'input-error' : addUserForm.phone_number.$invalid && (!addUserForm.phone_number.$pristine || clicked)}"
+             ng-minlength="9" required />
+    </div>
+    <div class="form-group">
+      <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="employee.email"
+             ng-class="{'input-error' : addUserForm.email.$invalid && (!addUserForm.email.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group" ng-show="driver">
+      <label for="driver_licence">driver_licence:</label>
+      <input type="text" class="form-control" id="driver_licence" placeholder="driver_licence" ng-model="driver_licence" required="string"/>
+    </div>
+    <div class="my-button important-button" ng-click="AddUser()">{{'texts.registration_user' | i18next}}</div>
+  </form>
+</div>
