--- a/app/components/Account/Registration/addVehicleView.html
+++ b/app/components/Account/Registration/addVehicleView.html
@@ -1,24 +1,31 @@
-<h1>Registorvat noveho vozidlo</h1>
-<form>
-   <div class="form-group">
-    <label for="type">Typ:</label>
-    <input type="text" class="form-control" id="type" placeholder="typ" ng-model="type" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="brand">Značka:</label>
-    <input type="text" class="form-control" id="brand" placeholder="značka" ng-model="brand" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="capacity">Kapacita:</label>
-    <input type="text" class="form-control" id="capacity" placeholder="kapacita" ng-model="capacity" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="rz">RZ:</label>
-    <input type="text" class="form-control" id="rz" placeholder="rz" ng-model="rz" required="string" required/>
-  </div>
-  <div class="form-group">
-    <label for="size">Size:</label>
-    <input type="text" class="form-control" id="size" placeholder="size" ng-model="size" required="string" required/>
-  </div>
-  <input type="submit" class="btn btn-primary" ng-click="AddVehicle()" value="Registrace vozidla"/>
-</form>
+<div class="add-vehicle-page">
+  <h1>{{'texts.registration_vehicle' | i18next}}</h1>
+  <form name="vehicleForm" novalidate>
+     <div class="form-group">
+       <input type="text" name="type" class="form-control my-input" placeholder="{{'texts.vehicle_type' | i18next}}" ng-model="vehicle.type"
+              ng-class="{'input-error' : vehicleForm.type.$invalid && (!vehicleForm.type.$pristine || clicked)}"
+              required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="brand" class="form-control my-input" placeholder="{{'texts.vehicle_brand' | i18next}}" ng-model="vehicle.brand"
+             ng-class="{'input-error' : vehicleForm.brand.$invalid && (!vehicleForm.brand.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="capacity" class="form-control my-input" placeholder="{{'texts.vehicle_capacity' | i18next}}" ng-model="vehicle.capacity"
+             ng-class="{'input-error' : vehicleForm.capacity.$invalid && (!vehicleForm.capacity.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="rz" class="form-control my-input" placeholder="{{'texts.vehicle_rz' | i18next}}" ng-model="vehicle.rz"
+             ng-class="{'input-error' : vehicleForm.rz.$invalid && (!vehicleForm.rz.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="form-group">
+      <input type="text" name="size" class="form-control my-input" placeholder="{{'texts.vehicle_size' | i18next}}" ng-model="vehicle.size"
+             ng-class="{'input-error' : vehicleForm.size.$invalid && (!vehicleForm.size.$pristine || clicked)}"
+             required />
+    </div>
+    <div class="my-button important-button" ng-click="AddVehicle()">{{'texts.registration_vehicle' | i18next}}</div>
+  </form>
+</div>
