--- a/app/components/Account/Registration/addUserView.html
+++ b/app/components/Account/Registration/addUserView.html
@@ -64,9 +64,10 @@
              ng-class="{'input-error' : addUserForm.email.$invalid && (!addUserForm.email.$pristine || clicked)}"
              required />
     </div>
-    <div class="form-group" ng-show="driver">
-      <label for="driver_licence">driver_licence:</label>
-      <input type="text" class="form-control" id="driver_licence" placeholder="driver_licence" ng-model="driver_licence" required="string"/>
+    <div class="form-group" ng-if="employee.role == 4">
+      <input type="text" name="driver_licence" class="form-control my-input" placeholder="{{'texts.driver_licence' | i18next}}" ng-model="employee.driver_licence"
+             ng-class="{'input-error' : addUserForm.driver_licence.$invalid && (!addUserForm.driver_licence.$pristine || clicked)}"
+             required />
     </div>
     <div class="my-button important-button" ng-click="AddUser()">{{'texts.registration_user' | i18next}}</div>
   </form>
