--- a/css/form.css
+++ b/css/form.css
@@ -52,6 +52,7 @@
     color: white;
     text-align: center;
     cursor: pointer;
+    display: inline-block;
     margin-right: 15px;
     margin-bottom: 15px;
 }
