--- a/app/components/Auction/Detail/auctionDetailView.html
+++ b/app/components/Auction/Detail/auctionDetailView.html
@@ -26,7 +26,7 @@
         <button ng-if="auctionItem.isFavourite"  ng-click="deleteFromFavourite()">Odebrat z oblíbených</button>
         <button ng-if="!auctionItem.isFavourite"  ng-click="addToFavourite()">Přidat do oblíbených</button>
     </div>
-    <h3>Historie</h3>
+    <h3>Historie</h3
     <ul>
         <li ng-repeat="item in auctionHistory">User:{{item.user_img}} - Amount:{{item.amount}} - Date:{{item.date}}</li>
     </ul>
