--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -9,26 +9,118 @@
     </style>
 
     <h1>Aukce</h1>
-    <div class="auction-list col-xs-12 col-sm-12 col-sm-offset-0 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
-        <div class="auction-header-line col-xs-12 col-sm-12 col-sm-offset-0 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
-            <div class="auction-header col-xs-9 col-sm-9 col-sm-offset-0 col-md-9 col-md-offset-0 col-lg-10 col-lg-offset-0">
-                <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0">From</div>
-                <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0">To</div>
-                <div class="auction-cell col-xs-4 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">Freight description</div>
-                <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0">Price</div>
-                <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0">End auction</div>
+    <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+        <div class="auction-header-line col-sm-12 col-md-12 col-lg-12">
+            <div class="auction-header col-sm-9 col-md-9 col-lg-10">
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">From</div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">To</div>
+                <div class="auction-cell col-sm-4 col-md-4 col-lg-4">Freight description</div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">Price</div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">End auction</div>
             </div>
         </div>
-        <div class="auction-body col-xs-12 col-sm-12 col-sm-offset-0 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
+        <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="auction-item" ng-repeat="item in AuctionList">
-                <div class="auction-info col-xs-9 col-sm-9 col-sm-offset-0 col-md-9 col-md-offset-0 col-lg-10">
-                    <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0"><span>{{item.from}}</span></div>
-                    <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0"><span>{{item.to}}</span></div>
-                    <div class="auction-cell col-xs-4 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0"><span>{{item.freight_description}}</span></div>
-                    <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0"><span>{{item.price}}</span></div>
-                    <div class="auction-cell col-xs-2 col-sm-2 col-sm-offset-0 col-md-2 col-md-offset-0 col-lg-2 col-lg-offset-0"><span>{{item.end_auction}}</span></div>
+                <div class="auction-info col-xs-12 col-sm-9 col-md-9 col-lg-10">
+                    <div class="auction-label col-xs-12">From</div>
+                    <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.from}}</span></div>
+                    <div class="auction-label col-xs-12">To</div>
+                    <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.to}}</span></div>
+                    <div class="auction-label col-xs-12">Freight description</div>
+                    <div class="auction-cell col-xs-12 col-sm-4 col-md-4 col-lg-4"><span>{{item.freight_description}}</span></div>
+                    <div class="auction-label col-xs-12">Price</div>
+                    <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.price}}</span></div>
+                    <div class="auction-label col-xs-12">End auction</div>
+                    <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.end_auction}}</span></div>
                 </div>
-                <div class="auction-button-detail col-xs-3 col-sm-3 col-sm-offset-0 col-md-3 col-md-offset-0 col-lg-2 col-lg-offset-0"><div class="my-button normal-button"><span>DETAIL</span></div></div>
+                <div class="auction-button-detail col-xs-12 col-sm-3 col-md-3 col-lg-2"><div class="my-button normal-button"><span>DETAIL</span></div></div>
+                <div class="auction-detail popover bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="arrow"></div>
+                    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                        <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Místa vyzvednutí nákladu</h2>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Odkud:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>dasdsa dasd sadsadas</span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Kam:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Nahráno:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                    </div>
+                    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                        <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">O nákladu</h2>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Odkud:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Kam:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Nahráno:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                    </div>
+                    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                        <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Aukce</h2>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Odkud:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Kam:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Nahráno:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec:</span></div>
+                            <div class="col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>asdsa dasd sad </span></div>
+                        </div>
+                    </div>
+                    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-6">
+                        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Historie příhozů</h2>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span>asdsa dasd sad </span></div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span>asdsa dasd sad </span></div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span>asdsa dasd sad </span></div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span>asdsa dasd sad </span></div>
+                    </div>
+                    <div class="auction-detail-item col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-6 col-lg-offset-0">
+                        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Chcete přihodi?</h2>
+                        <div class="has-feedback has-feedback-left col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+                            <select class="form-control my-input col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <option>audi</option>
+                                <option>bmw</option>
+                                <option>bently</option>
+                            </select>
+                            <i class="glyphicon glyphicon-lock form-control-feedback"></i>
+                        </div>
+                        <div class="has-feedback has-feedback-left col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <input type="text" class="form-control my-input bid" placeholder="Přihodit"/>
+                            <i class="glyphicon glyphicon-lock form-control-feedback"></i>
+                        </div>
+                        <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><span>18 dní 00:25:15</span></span>
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                            <div class="my-button important-button"><span>PŘIHODIT</span></div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
 	</div>
