--- a/css/form.css
+++ b/css/form.css
@@ -1,3 +1,6 @@
+.form-control-feedback{
+ line-height: 40px;
+}
 .fa.form-control-feedback {
     line-height: 40px; /* @input-height-base; */
 }
@@ -8,7 +11,7 @@
     line-height: 46px; /* @input-height-base; */
 }
 
-.has-feedback-left input.form-control {
+.has-feedback-left .form-control {
     padding-left: 34px; /* @input-height-base; */
     padding-right: 12px; /* @padding-base-horizontal */
 }
@@ -31,6 +34,7 @@
 .my-input{
     border: 1px solid #e6e6f1;
     border-radius: 0;
+    height: 40px;
 }
 .input-error{
     border: 1px solid #e91d27;
