--- a/app/components/Auction/Add/auctionAddView.html
+++ b/app/components/Auction/Add/auctionAddView.html
@@ -14,10 +14,6 @@ $(function () {
             }); 
 </script>
 
-
-    <span class="help-block"><b>Model: </b>{{from}}</span>
-    <span class="help-block"><b>Model: </b>{{to}}</span>
-    <span class="help-block"><b>Model: </b>{{address}}</span>
     <div id="map" style="display:none"></div>
     <div id="distance" style="display:none"></div>
     
@@ -30,15 +26,15 @@ $(function () {
             type="text" 
             name="from"
             id="from"
-            vs-place="address.place" 
-            vs-place-id="address.components.placeId"
-            vs-street-number="address.components.streetNumber" 
-            vs-street="address.components.street"
-            vs-city="address.components.city"
-            vs-state="address.components.state"
-            vs-country-short="address.components.countryCode"
-            vs-country="address.components.country"
-            vs-district = "address.components.district"
+            vs-place="from_address.place" 
+            vs-place-id="from_address.components.placeId"
+            vs-street-number="from_address.components.streetNumber" 
+            vs-street="from_address.components.street"
+            vs-city="from_address.components.city"
+            vs-state="from_address.components.state"
+            vs-country-short="from_address.components.countryCode"
+            vs-country="from_address.components.country"
+            vs-district = "from_address.components.district"
             class="form-control" 
             placeholder="Enter any address">
   </div>
@@ -49,6 +45,15 @@ $(function () {
             type="text" 
             name="to"
             id="to"
+            vs-place="to_address.place" 
+            vs-place-id="to_address.components.placeId"
+            vs-street-number="to_address.components.streetNumber" 
+            vs-street="to_address.components.street"
+            vs-city="to_address.components.city"
+            vs-state="to_address.components.state"
+            vs-country-short="to_address.components.countryCode"
+            vs-country="to_address.components.country"
+            vs-district = "to_address.components.district"
             class="form-control" 
             placeholder="Enter any address">
   </div>
@@ -139,7 +144,7 @@ $(function () {
   </div>
   <div class="form-group">
     <label for="hot">Hot:</label>
-    <input type="checkbox" class="form-control" id="hot" ng-model="hot" required="string" required/>
+    <input type="checkbox" class="form-control" id="hot" ng-model="hot" required="string"/>
   </div>          
 
   <input type="submit" class="btn btn-primary" ng-click="addAuction()"/>
